--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 
 <body>
+  
   <div class="container">
     <header>
       <a href="#"><img src="https://talent.zuri.team/logo2.svg" alt="logo1"></a>
       <nav>
         
-          <a href="#home">Home</a> 
-          <a href="#impact">Impact</a>
-           <a href="#why_us">Why Us</a>
+         <span class="span1"><a class="nav-home" href="#home">Home</a> </span> 
+         <span class="span2"> <a class="nav-impact" href="#impact">Impact</a></span>
+          <span class="span3"> <a class="nav-why" href="#why_us">Why Us</a></span>
                <a href="#"><button>Hire talents</button></a>
       
       </nav>
@@ -66,7 +67,7 @@ Talent Placed in 5 countries
 
         <div class="stacks">
    <ul>
-    <li>UI/UX Designers</li>
+    <li class="list">UI/UX Designers</li>
     <li>Backend Developers</li>
     <li>DevOps Engineers</li>
     <li>Frontend Developer</li>
