--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <div class="container">
     <header>
-      <a href="#"><img src="https://talent.zuri.team/logo2.svg" alt="logo1"></a>
+      <a href="#" class="header-img"><img src="https://talent.zuri.team/logo2.svg" alt="logo1"></a>
       <nav>
         
          <span class="span1"><a class="nav-home" href="#home">Home</a> </span> 
